# sdx-1.4-07300

OTA/device/qcom/common/recovery/oem-recovery/: Makefile.am  configure.ac  gpt-utils.cpp  recovery-ufs-bsg.cpp  recovery-ufs-bsg.h
OTA/recovery/: Android.mk  Makefile.am  configure.ac  install.cpp  install.h  recovery.cpp  screen_ui.cpp  ui.cpp
OTA/recovery/edify/: Makefile.am
OTA/recovery/mtdutils/: mounts.c  mtdutils.c  mtdutils.h
OTA/recovery/updater/: Makefile.am  blockimg.cpp  install.cpp
data-ipa-cfg-mgr/: configure.ac
data-ipa-cfg-mgr/ipacm/inc/: IPACM_Config.h  IPACM_ConntrackClient.h  IPACM_ConntrackListener.h  IPACM_Conntrack_NATApp.h  IPACM_Defs.h  IPACM_Filtering.h  IPACM_Iface.h  IPACM_Lan.h  IPACM_LanToLan.h  IPACM_Log.h  IPACM_Neighbor.h  IPACM_Routing.h  IPACM_Wan.h  IPACM_Wlan.h  IPACM_Xml.h
data-ipa-cfg-mgr/ipacm/src/: IPACM_CmdQueue.cpp  IPACM_Config.cpp  IPACM_ConntrackListener.cpp  IPACM_Conntrack_NATApp.cpp  IPACM_EvtDispatcher.cpp  IPACM_Filtering.cpp  IPACM_Iface.cpp  IPACM_IfaceManager.cpp  IPACM_Lan.cpp  IPACM_LanToLan.cpp  IPACM_Log.cpp  IPACM_Main.cpp  IPACM_Neighbor.cpp  IPACM_Netlink.cpp  IPACM_Routing.cpp  IPACM_Wan.cpp  IPACM_Wlan.cpp  IPACM_Xml.cpp  IPACM_cfg.xml  Makefile.am  start_ipacm_le
data-ipa-cfg-mgr/ipanat/inc/: ipa_ipv6cti.h
data-ipa-cfg-mgr/ipanat/src/: Android.mk  Makefile.am  ipa_ipv6ct.c  ipa_nat_drvi.c
data-ipa-cfg-mgr/ipanat/test/: Android.mk
data-kernel/drivers/emac-dwc-eqos/: DWC_ETH_QOS_platform.c
frameworks/av/camera/: CameraMetadata.cpp
mdm-init/wlan_sdxlemur/: WCNSS_qcom_cfg.ini  start_cnss_le
mdm-init/wlan_standalone/: Makefile.am  QCA6574AU.LE.2.2.1_Rome_PCIe_qcacld-2.0.ini
qcom-opensource/bt/bt-app/: configure.ac
qcom-opensource/qca-ssdk/: config
qcom-opensource/qca-ssdk-shell/make/: linux_opt.mk
shortcut-fe/shortcut-fe/: Makefile  sfe.h  sfe_cm.c  sfe_cm.h  sfe_ipv4.c  sfe_ipv6.c
system/bt/: configure.ac
system/core/usb/: Makefile.am  start_usb  target  usbd.cpp  usbd.service
system/core/usb/compositions/: 9001  900E  F000
tcp-splice/: Makefile  tcp-splice-interface.c  tcp-splice.c  tcp-splice.h
(+88 files in other folders)
